# imbolc-workspace

./: .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  CODE_MAP.md  COMMENTBOX.md  Cargo.toml  README.md  SCRATCH.md  TASKS.md  TASKS_ARCH.md  TASKS_DONE.md  cclsp.json
imbolc-audio/: CLAUDE.md  Cargo.toml
imbolc-audio/src/: action_projection.rs  arp_state.rs  arpeggiator_tick.rs  audio_thread.rs  bus_allocator.rs  click_tick.rs  commands.rs  devices.rs  drum_tick.rs  event_log.rs  generative_state.rs  generative_tick.rs  handle.rs  input.rs  lib.rs  osc_client.rs  osc_sender.rs  paths.rs  playback.rs  snapshot.rs  triple_buffer.rs
imbolc-audio/src/engine/: automation.rs  backend.rs  mod.rs  recording.rs  routing.rs  samples.rs  server.rs  voice_allocator.rs  voices.rs  vst.rs
imbolc-core/: .gitignore  CLAUDE.md  Cargo.toml  TECHDEETS.md  config.toml
imbolc-core/src/: action.rs  config.rs  interaction_log.rs  lib.rs  paths.rs  scd_parser.rs  vst3_probe.rs
imbolc-core/src/audio/: action_projection.rs  arpeggiator_tick.rs  (+16 more)
imbolc-core/synthdefs/: compile.scd  compile_vst.scd  imbolc_acid.scsyndef  imbolc_additive.scsyndef  imbolc_adsr.scsyndef  imbolc_allpass.scsyndef  imbolc_allpass_mono.scsyndef  imbolc_audio_in.scsyndef  imbolc_autopan.scsyndef  imbolc_autotune.scsyndef  imbolc_bass_guitar.scsyndef  imbolc_bitcrusher.scsyndef  imbolc_bitcrusher_mono.scsyndef  imbolc_blown.scsyndef  imbolc_bowed.scsyndef  imbolc_bpf.scsyndef  imbolc_bpf_mono.scsyndef  imbolc_brass_stab.scsyndef  imbolc_bus_in.scsyndef  imbolc_bus_out.scsyndef  imbolc_cabinet.scsyndef  imbolc_cabinet_mono.scsyndef  imbolc_chaos.scsyndef  imbolc_choir.scsyndef  imbolc_chorus.scsyndef  imbolc_chorus_mono.scsyndef  imbolc_clap.scsyndef  imbolc_clave.scsyndef  imbolc_click.scsyndef  imbolc_comb.scsyndef  imbolc_comb_mono.scsyndef  imbolc_conga.scsyndef  imbolc_convolution_reverb.scsyndef  imbolc_cowbell.scsyndef  imbolc_crossfader.scsyndef  imbolc_delay.scsyndef  imbolc_delay_mono.scsyndef  imbolc_denoise.scsyndef  imbolc_disk_record.scsyndef  imbolc_distortion.scsyndef  (+118 more)
imbolc-gui/: CLAUDE.md  Cargo.toml
imbolc-gui/src/: app.rs  dispatch.rs  file_ops.rs  keybindings.rs  main.rs  state.rs
imbolc-net/: CLAUDE.md  Cargo.toml  README.md
imbolc-net/src/: client.rs  discovery.rs  framing.rs  lib.rs  protocol.rs  server.rs  session_file.rs
imbolc-net/tests/: broadcast.rs  handshake.rs  multi_client.rs  ownership.rs  privilege.rs  protocol_roundtrip.rs  reconnection.rs
imbolc-ui/: .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  cclsp.json  fat_bass.scd  inbox.txt  inbox2.txt  keybindings.toml
imbolc-ui/.cargo/: config.toml
imbolc-ui/src/: global_actions.rs  main.rs  midi_dispatch.rs  network.rs  setup.rs
imbolc-ui/tests/: e2e_test.rs
(+477 files in other folders)
