[workspace]
resolver = "2"
members = [
    "imbolc-ui",
    "imbolc-core",
    "imbolc-types",
    "imbolc-net",
    "imbolc-gui",
]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
rusqlite = { version = "0.31", features = ["bundled"] }
rosc = "0.10"
midir = "0.9"
regex = "1"
dirs = "5"
hound = "3"
toml = "0.8"
