[package]
name = "imbolc-audio"
version = "0.1.0"
edition = "2021"

[dependencies]
imbolc-types = { path = "../imbolc-types" }
log = "0.4"
rosc = "0.10"
regex = "1"
dirs = "5"
hound = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libloading = "0.8"
vst3 = "0.3"
crossbeam-channel = "0.5"
cpal = "0.15"
tempfile = "3"
